--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
-pandas>=0.24
-numpy>=1.15
-requests >= 2.21
-multitasking >= 0.0.7
-yfinance~=0.2.50
+# Backend
+fastapi
+uvicorn
+pydantic
 mplfinance
-fastapi~=0.115.5
-pydantic~=2.9.2
+yfinance
+multitasking
+requests
+numpy
+pandas
 pytest
+
+# Frontent
