--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,17 @@
-fastapi~=0.115.5
-uvicorn~=0.32.1
-pydantic~=2.9.2
-mplfinance
-alpha_vantage~=3.0.0
-
 cachetools~=5.5.2
-python-dotenv~=1.0.1
-multitasking
-requests~=2.32.3
-numpy
-pandas
 pytest~=8.3.4
-
-ollama
-jspdf
+fastapi==0.115.5
+uvicorn==0.32.1
+pydantic==2.9.2
+alpha_vantage==3.0.0
+httpx==0.27.2
+pandas==2.2.3
+numpy==1.26.4
 pymongo==4.11.1
-motor~=3.7.0
+motor==3.7.0
+python-dotenv==1.0.1
+openai==1.59.7
+langchain==0.3.14
+ollama==0.4.7
+requests==2.32.3
+jspdf
